Fixes colour contrast issue for catalog feedback navbar (#3617)

--- a/app/assets/stylesheets/components/nav--harmful-content.scss
+++ b/app/assets/stylesheets/components/nav--harmful-content.scss
@@ -13,4 +13,8 @@
   .navbar-brand {
     font-size: 1rem;
   }
+
+  a {
+    color: #23578B;
+  }
 }
